{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "KeyboardInputs",
            "id": "412f06fa-979f-4374-857f-c3f5054d73f8",
            "actions": [
                {
                    "name": "MovementVertical",
                    "type": "Value",
                    "id": "81d250ab-8e8b-4ff3-89f9-79d424263efc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MovementHorizontal",
                    "type": "Button",
                    "id": "bc9d8eda-450e-4ded-8987-e0f9824d68ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "43fd6c82-7625-4358-b3b2-cb7177f96550",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "b3fc7e57-7b03-4009-b531-18567aa912d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "8f8781a5-1520-4b62-8d70-fe5f48e573f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowBags",
                    "type": "Button",
                    "id": "2e887e2d-64c5-45b3-8457-1103c06753fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseFire",
                    "type": "Button",
                    "id": "97e6dd22-385f-4c37-b75c-6d2ccafbc77e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Value",
                    "id": "25dcac19-f29c-486a-b402-474758914196",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "f7c1cca1-f900-4c7b-97b9-d126fdfd0203",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeFireMode",
                    "type": "Button",
                    "id": "82369aaa-c500-47d3-9305-914f5706df55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchPrimaryWeapon",
                    "type": "Button",
                    "id": "cf694e08-6092-4d7e-be93-37b0a266d218",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchSecondary",
                    "type": "Button",
                    "id": "f8dc5c65-731f-45ee-8d25-35994a51e993",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "128eb2cb-4311-4d0a-97e8-dd67027240da",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5de5fcc0-47a4-4b13-8d09-45513da04dfa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f413703e-4ff4-42e6-9a45-4a7dc26c24de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa488c7b-aaef-4148-8933-a7c2ca95acce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "360858ba-cda3-43a3-8693-5b390196c523",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c507c905-05ed-463a-87eb-e9d22a95f1df",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bffc697f-f9a8-45eb-ab53-9675016230ce",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cdd7de9-62af-400d-9261-f944e23843c8",
                    "path": "<Keyboard>/g",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowBags",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c7cf1a7-7174-4c23-9bc2-72737cd255e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42e454de-549f-4371-bda7-54e8e0eab882",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e2abb6c-3639-4fd5-9d5d-544981209592",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f216bee7-d86f-4928-aa9c-6df864db6e79",
                    "path": "<Keyboard>/v",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeFireMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0922670-f1ec-4feb-b69e-994fac33398d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchPrimaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd371244-563c-4bdb-ae42-197a3f61df9b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}